--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@nomiclabs/buidler-web3": "^1.3.4",
+    "@openzeppelin/buidler-upgrades": "^1.2.1",
     "@openzeppelin/contracts": "^3.2.0",
     "dotenv": "^8.2.0"
   }
