--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nomiclabs/buidler": "^1.4.6",
     "@nomiclabs/buidler-ethers": "^2.0.0",
     "@nomiclabs/buidler-waffle": "^2.1.0",
+    "buidler-contract-sizer": "^1.0.2",
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.1.0",
     "ethers": "^5.0.13"
