--- a/package.json
+++ b/package.json
@@ -9,20 +9,17 @@
   "author": "alexgausman",
   "license": "MIT",
   "devDependencies": {
-    "@nomiclabs/buidler": "^1.4.6",
-    "@nomiclabs/buidler-ethers": "^2.0.0",
-    "@nomiclabs/buidler-waffle": "^2.1.0",
-    "buidler-contract-sizer": "^1.0.2",
-    "chai": "^4.2.0",
-    "ethereum-waffle": "^3.1.0",
-    "ethers": "^5.0.13"
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "chai": "^4.3.4",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.4.1"
   },
   "dependencies": {
-    "@nomiclabs/buidler-web3": "^1.3.4",
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@openzeppelin/buidler-upgrades": "^1.2.2",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "^3.2.0",
     "@openzeppelin/contracts-upgradeable": "^3.4.0",
+    "@openzeppelin/hardhat-upgrades": "^1.9.0",
     "dotenv": "^8.2.0",
     "hardhat": "^2.4.3"
   }
